# remaro_worlds

./: .gitignore  CMakeLists.txt  README.md  package.xml  todo.txt
launch/: maze_world.launch  min_pipes.launch  min_pipes.launch.py  min_world.launch  small_min_pipes.launch.py  spawn_auv.launch  spawn_gas_infrastructure_world.launch  spawn_jenga_maze.launch  spawn_jenga_wall.launch  spawn_obstacles.launch  spawn_sdf.launch  spawn_small_pipeline_world.launch  spawn_small_pipeline_world_with_maze.launch
materials/: README.md
materials/scripts/: sand.material  water.material
models/Grey Wall/: model.config  model.sdf
models/min_pipes_environment/: model.config  model.sdf
models/min_pipes_objects/: model.config  model.sdf
models/min_pipes_objects/meshes/: anchor.dae  drum.dae
models/min_pipes_pipeline/: model.config  model.sdf
models/objects/: anchor.dae  container.dae  drum.dae  model.config
models/objects/anchor/: model.config  (+1 more)
models/obstacles/: model.config
models/ocean_surfaces/: model.config
models/pipelines/: model.config
models/pipes/: anode.dae  bent.dae  clipped_vA.dae  clipped_vB.dae  dented.dae  straight.dae  valve.dae  warped.dae
models/seafloors/: model.config
models/small_min_pipes_pipeline/: model.config  model.sdf
models/structures/: model.config
models/uneven_wall/: model.config  model.sdf
models/water/: min_world.dae
urdf/: jenga_wall.urdf.xacro  min_world.urdf
worlds/: bluerov_pipeline.world  gas_infrastructure.world  maze.world  min_pipes.world  min_world.world  room_walls.world  small_pipeline.world  walls.world
(+52 files in other folders)
