<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>remaro_worlds</name>
  <version>0.0.0</version>
  <description>REMARO Worlds</description>
  <maintainer email="remaro@remaro.eu">remaro</maintainer>
  <license>GPL-3.0</license>

  <exec_depend>ros_gz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
